# AtilaCalculatorSoftware

./: .clang-format  .gitignore  .project  App.cpp  BorderWidgetQt.cpp  BorderWidgetQt.h  BorderWidgetQt.ui  BorderWidgetQtDriver.cpp  CMakeLists.txt  Doxyfile  LICENSE.md  Makefile  README.md  build.gradle  notes.txt  settings.gradle
.github/workflows/: build-ubuntu.yml  generate-documentation.yml
cmake/: Utils.cmake
cpp/: app.cpp  binary_data.cpp  binary_data_GiD.cpp  binary_data_class.cpp  mainwindow.ui  mesh_GiD.cpp  objVtkfromGiD.cpp  result.cpp
doc/: annotated.html  annotated_dup.js  classes.html  dir_3d69f64eaf81436fe2b22361382717e5.html  dir_3d69f64eaf81436fe2b22361382717e5.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_72acffa14d54ee0aed1160907ab211a1.html  dir_72acffa14d54ee0aed1160907ab211a1.js  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dir_aebb8dcc11953d78e620bbef0b9e2183.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_ffde1fbcaa8d6b0d34e29c3bddf7a801.html  dir_ffde1fbcaa8d6b0d34e29c3bddf7a801.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  hierarchy.html  hierarchy.js  index.html  menudata.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js
doc/d0/dce/: binary__data_8cpp.html
doc/d1/d8c/: logger_8h.html  logger_8h.js  logger_8h_source.html
doc/d2/d3b/: log__entries_8cpp.html
doc/d2/d86/: classBinaryDataWrapper-members.html
doc/d2/dcd/: classBinaryData-members.html
doc/d3/d30/: logger_8cpp.html
doc/d4/d54/: classLogger-members.html
doc/d5/df2/: app_8cpp.html
doc/d6/d1a/: classMainWindow.html  classMainWindow.js
doc/d6/db6/: binary__data_8h.html  binary__data_8h_source.html
doc/d7/d4c/: main__window_8cpp.html
doc/d7/deb/: main__window_8h.html  main__window_8h_source.html
doc/d7/df3/: classLogMetaData.html  classLogMetaData.js
doc/d8/d3b/: mesh_8h.html  mesh_8h.js  mesh_8h_source.html
doc/d8/dce/: classResult.html  classResult.js
doc/d8/dd2/: mesh_8cpp.html
doc/d9/d09/: binary__data__wrapper_8cpp.html
doc/d9/d5e/: classMesh.html  classMesh.js
doc/d9/da9/: log__entries_8h.html  log__entries_8h.js  log__entries_8h_source.html
doc/d9/dbe/: classMainWindow-members.html
doc/d9/dda/: classLogEntries.html  classLogEntries.js
doc/da/d64/: classMesh-members.html
doc/da/d6b/: classNode-members.html
doc/da/dcb/: binary__data__wrapper_8h.html  binary__data__wrapper_8h_source.html
doc/da/ddd/: README_8md.html
doc/db/d67/: classLogger.html  classLogger.js
doc/db/dff/: classLogMetaData-members.html
doc/dc/d47/: classBinaryData.html  classBinaryData.js  result_8cpp.html
doc/dc/d54/: common_8h.html  common_8h.js  common_8h_source.html
doc/dc/d59/: classResult-members.html
doc/dc/d6a/: classBinaryDataWrapper.html  classBinaryDataWrapper.js
doc/de/d63/: classLogEntries-members.html
doc/de/d93/: result_8h.html  result_8h_source.html
doc/de/da5/: utilities_8cpp.html  utilities_8cpp.js
doc/de/df0/: utilities_8h.html  utilities_8h.js  utilities_8h_source.html
doc/df/dd0/: classNode.html  classNode.js
doc/df/dfc/: version_8h.html  version_8h.js  version_8h_source.html
doc/html/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  hierarchy.html  hierarchy.js  index.html  menudata.js  navtreedata.js  navtreeindex0.js
doc/html/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_3.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  (+10 more)
doc/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hierarchy.tex  index.tex  refman.tex
doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  (+48 more)
headers/: app.h  binary_data_GiD.hpp  binary_data_class.hpp  mesh_GiD.hpp  objVtkfromGiD.hpp
include/: BinaryDataWrapper.h  MainWindow.h  Mesh.h  Result.h  binary_data.h  binary_data_wrapper.h  main_window.h  utilities.h  version.h
include/core/: binary_data.h  binary_data_wrapper.h  main_window.h  mesh.h  result.h  utilities.h
include/logger/: common.h  log_entries.h  logger.h
qt/: MainWindow.ui  MyRubberBand3D.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/libQtJean/: libQtJean.pro  libqtjean.cpp  libqtjean.h
scripts/: check-includable.sh  commit-version.sh  fix-new-line.sh  prepare-documentation.sh  print-version.sh  update-version.sh
src/: App.cpp  BinaryData.cpp  BinaryData.h  BinaryDataClass.cpp  BinaryDataClass.h  BinaryDataGiD.cpp  BinaryDataGiD.h  BinaryDataWrapper.cpp  BinaryDataWrapper.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Mesh.cpp  Mesh.h  MeshGiD.cpp  MeshGiD.h  Result.cpp  Result.h  ResultGiD.cpp  ResultGiD.h  Utils.cpp  Utils.h  app.cpp  binary_data.cpp  binary_data.hpp  binary_data_GiD.cpp  binary_data_GiD.hpp  binary_data_class.cpp  binary_data_wrapper.cpp  main_window.cpp  mesh.cpp  mesh.hpp  mesh_GiD.cpp  result.cpp  result.hpp  result_GiD.cpp  utilities.cpp
src/core/: app.cpp  binary_data.cpp  binary_data_wrapper.cpp  main_window.cpp  mesh.cpp  result.cpp  utilities.cpp
src/logger/: log_entries.cpp  logger.cpp
(+73 files in other folders)
